--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                 <div class="col-lg-6 pb-5">
                     <div class="mb-3 pb-2">
                         <h6 class="text-primary text-uppercase">About Us</h6>
-                        <h1 class="display-5">We Produce Organic Food For Your Family</h1>
+                        <h1 class="display-5">We Provide Organic Farming Input For Your Sustainable Farming Production</h1>
                     </div>
                     <p class="mb-4">Tempor erat elitr at rebum at at clita. Diam dolor diam ipsum et tempor sit. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet magna</p>
                     <div class="row gx-5 gy-4">
@@ -128,8 +128,8 @@
                         </div>
                         <div class="col-sm-6">
                             <i class="fa fa-award display-1 text-secondary"></i>
-                            <h4>Award Winning</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
+                            <h4>Rural Centered</h4>
+                            <p class="mb-0">Milutech Solutions is committed to long-term sustainability by focusing on and prioritizing women, youth, and sustainable practices.</p>
                         </div>
                     </div>
                 </div>
